# WIDSLibraryAutoCheck-Qt

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
core/: apirequest.cpp  apirequest.h  apirequest_qt.cpp  checkcore.cpp  checkcore.h  datacontrol.cpp  datacontrol.h
pojo/: authconfig.cpp  authconfig.h  user.cpp  user.h
ui/: logindialog.cpp  logindialog.h  logindialog.ui
